compiler/kernc_cli/tests/soundness/run-pass/const_generics/const_bound_method_dispatch_uses_specific_trait_arg_impl.rn
// class: const-generic-bound-dispatch
// source: bound-method static dispatch should keep the concrete const trait argument when selecting impls
// exit: 0

type Family[N: usize] = trait {
    value: fn() i32,
};

type X = struct {};

impl *X: Family[1] {
    fn value() i32 {
        return 11;
    }
}

impl *X: Family[2] {
    fn value() i32 {
        return 22;
    }
}

fn call[N: usize](x: *X) i32
    where *X: Family[N],
{
    return x.value();
}

fn main() i32 {
    let x = X.{};
    return call[2](x.&) - 22;
}
