compiler/kernc_cli/tests/soundness/reject/supertraits/implicit_supertrait_cycle_no_longer_reaches_lowering.rn
// source: a where-clause impl cannot satisfy a trait's declared supertrait through a proof cycle
// stderr: impl of trait `A` is missing a required supertrait proof
// stderr: required bound: `&X: B`

trait B {};

trait A: B {};

struct X {};

impl &X: B
    where &X: A,
{}

impl &X: A {}

fn main() i32 {
    let x = X.{};
    let a = &A.{ x.& };
    let b = &B.{ a };
    _ = b;
    return 0;
}
